# AgenticHR

./: .env.example  .gitignore  0001-workers-and-gateway-cleanup.patch  CELERY_WORKERS_IMPLEMENTATION.md  DELIVERABLES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  FREE_TIER_GUIDE.md  IMPLEMENTATION_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  KONG_JWT_IMPLEMENTATION.md  LESSONS_LEARNED.md  LICENSE  MANUAL_CI_SETUP.md  Makefile  QUICKSTART_TEST_RESULTS.md  QUICK_START.md  README.md  README_UPDATED.md  ROADMAP_IMPLEMENTATION_COMPLETE.md  TASK_COMPLETION_REPORT.md  pyproject.toml  smoke_test_celery.py  test_employee_crud.py  test_quickstart.py
.github/workflows/: ci.yml  deploy.yml
configs/: erpnext-hr-config.json  keycloak-realm-config.json
docker/: attendance-svc.Dockerfile  compose.dev.yml  employee-svc.Dockerfile  leave-svc.Dockerfile
docker/keycloak/: realm-export.json
docker/kong/: kong.yml
docs/adr/: 001-microservices-architecture.md  002-db-isolation.md  003-event-bus.md  004-workflows.md
docs/api/: agentichr-openapi.json  agentichr.postman.json
docs/api/tmp/: auth.json  employee.json
docs/compliance/: THIRD_PARTY_NOTICES.md  sbom.spdx.json
docs/security/: kong-jwt-setup.md
kubernetes/: erpnext-complete.yaml  erpnext-deployment.yaml  ingress.yaml  keycloak-deployment.yaml  namespace.yaml
libs/py-hrms-auth/: pyproject.toml
libs/py-hrms-auth/src/py_hrms_auth/: __init__.py  auth_config.py  jwt_dep.py  middleware.py  rbac.py
libs/py-hrms-observability/: pyproject.toml
libs/py-hrms-observability/src/py_hrms_observability/: __init__.py  audit_log.py  db.py  health.py  logging.py  metrics.py  middleware.py  tracing.py
libs/py-hrms-tenancy/: pyproject.toml
libs/py-hrms-tenancy/src/py_hrms_tenancy/: __init__.py  context.py  database.py
scripts/: bootstrap.sh  configure-erpnext-phase1.py  configure-keycloak.py  deploy-corrected-final.sh  deploy-free-tier-fixed.sh  deploy-free-tier.sh  deploy-full-system.sh  deploy.sh  merge_openapi.py  openapi_to_postman.py  test_celery.py  update_keycloak_keys.py
services/agents-gateway/: Dockerfile  pyproject.toml
services/agents-gateway/app/: db.py  main.py  models.py
services/attendance-svc/: alembic.ini  pyproject.toml
services/attendance-svc/app/: db.py  main.py  models.py  tasks.py
services/attendance-svc/migrations/: env.py
services/attendance-svc/migrations/versions/: 001_initial_migration.py
services/auth-svc/: Dockerfile  pyproject.toml
services/auth-svc/app/: db.py  main.py  tasks.py
services/employee-svc/: alembic.ini  pyproject.toml
services/employee-svc/app/: db.py  main.py  models.py  tasks.py
services/employee-svc/migrations/: env.py
services/employee-svc/migrations/versions/: 0001_init.py  0001_initial_employee_tables.py
services/employee-svc/scripts/: seed_employees.py
services/employee-svc/tests/: test_employee_contract.py
services/leave-svc/: pyproject.toml
services/leave-svc/app/: db.py  main.py  models.py  tasks.py  temporal_client.py
services/leave-svc/migrations/: env.py
services/leave-svc/migrations/versions/: 001_initial_migration.py
terraform/: main-free-tier.tf  main.tf  outputs.tf  variables.tf
workflows/: Dockerfile  leave_approval.py  pyproject.toml  requirements.txt  worker.py
workflows/leave_approval/: workflow.py
workflows/onboarding/: workflow.py
workflows/shared/: activities.py
