[tool.poetry]
name = "py-hrms-observability"
version = "0.1.0"
description = "Observability library for AgenticHR services"
authors = ["AgenticHR Team"]

[tool.poetry.dependencies]
python = "^3.11"
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
opentelemetry-instrumentation-sqlalchemy = "^0.42b0"
opentelemetry-instrumentation-httpx = "^0.42b0"
opentelemetry-exporter-jaeger-thrift = "^1.21.0"
opentelemetry-exporter-prometheus = "^1.12.0rc1"
structlog = "^23.2.0"
fastapi = "^0.104.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
