[tool.poetry]
name = "agents-gateway"
version = "0.1.0"
description = "AI Agents Gateway for AgenticHR"
authors = ["AgenticHR Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
httpx = "^0.25.2"
openai = "^1.3.0"
anthropic = "^0.7.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
celery = "^5.3.4"
redis = "^5.0.1"
structlog = "^23.2.0"
py-hrms-auth = {path = "../../libs/py-hrms-auth", develop = true}
py-hrms-observability = {path = "../../libs/py-hrms-observability", develop = true}
py-hrms-tenancy = {path = "../../libs/py-hrms-tenancy", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
