[project]
name = "auth-svc"
version = "0.1.0"
description = "Authentication service for AgenticHR"
authors = [
    {name = "AgenticHR Team", email = "team@agentichr.local"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.25.2",
    "celery>=5.3.4",
    "tenacity>=8.2.3",
    "structlog>=23.2.0",
    "passlib[bcrypt]>=1.7.4",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.2",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "py-hrms-auth @ file://../../libs/py-hrms-auth",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.2",
    "respx>=0.20.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
