[project]
name = "employee-svc"
version = "0.1.0"
description = "Employee management service for AgenticHR"
authors = [
    {name = "AgenticHR Team", email = "team@agentichr.local"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "celery>=5.3.4",
    "tenacity>=8.2.3",
    "structlog>=23.2.0",
    "python-dateutil>=2.8.2",
    "pydantic-extra-types>=2.2.0",
    "py-hrms-auth @ file://../../libs/py-hrms-auth",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.2",
    "respx>=0.20.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
